--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <script>
 let element = document.queryselector('p');
-element.textContent = navigator.userAgent
+element.textContent = navigator.userAgent;
 </script>
 </body>
 
