--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 
 <body>
 <h1>このデバイスの情報</h1>
-<p></p>
+<p><script>
+document.write(navigator.userAgent);
+</script></p>
 
-<script>
-let element = document.queryselector('p');
-element.textContent = navigator.userAgent;
-</script>
+
 </body>
 
 </html>
