--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 
 <body>
 <h1>このデバイスの情報</h1>
-<p><script>
-document.write(navigator.userAgent);
+<p>userAgent: &nbsp;<script>
+document.write(window.navigator.userAgent);
 </script></p>
 
+<p>Screen &nbsp; height: &nbsp;<script>
+document.write(window.navigator.height);
+</script></p>
+
+<p>Screen &nbsp; width: &nbsp;<script>
+document.write(window.navigator.width);
+</script></p>
 
 </body>
 
