--- a/index.html
+++ b/index.html
@@ -4,15 +4,27 @@
 </head>
 
 <body>
+<script>
+const script = document.createElement('script');
+script.src = 'https://ipinfo.io?callback=callback';
+document.body.appendChild(script);
+document.body.removeChild(script);
+</script>
 <h1>このデバイスの情報</h1>
+<p>IPaddress:&nbsp;<script>
+function callback(data) {
+ console.log(data.ip);
+}
+</script></p>
+<br>
 <p>userAgent:&nbsp;<script>
 document.write(window.navigator.userAgent);
 </script></p>
-<br><br>
+<br>
 <p>Screen&nbsp;height:&nbsp;<script>
 document.write(window.navigator.height);
 </script></p>
-<br><br>
+<br>
 <p>Screen&nbsp;width:&nbsp;<script>
 document.write(window.navigator.width);
 </script></p>
