--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ document.body.removeChild(script);
 <h1>このデバイスの情報</h1>
 <p>IPaddress:&nbsp;<script>
 function callback(data) {
- console.log(data.ip);
+ document.write(data.ip);
 }
 </script></p>
 <br>
