--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <script>
 const script = document.createElement('script');
 script.src = 'https://ipinfo.io?callback=callback';
-document.body.appendChild(script);
-document.body.removeChild(script);
+document.write(script);
 </script>
 <h1>このデバイスの情報</h1>
 <p>IPaddress:&nbsp;<script>
