--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ document.body.appendChild(script);
 document.body.removeChild(script);
 </script>
 <h1>このデバイスの情報</h1>
-<p>IPaddress:&nbsp;Print in console<script>
+<p>IPaddress:&nbsp;Print in console&nbsp;Press key of F12<script>
 function callback(data) {
  console.log(data.ip);
 }
