--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ document.body.removeChild(script);
 function callback(data) {
  console.log(data.ip);
 }
-</script>&emsp;</p><a href="https://ipinfo.io"　target="_blank">ipinfo.io</a>
+</script>&emsp;</p><a href="https://ipinfo.io"　target="_blank" rel="noreferrer noopener">ipinfo.io</a>
 <br><br>
 <p>userAgent:&nbsp;<script>
 document.write(window.navigator.userAgent);
