--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@ document.body.appendChild(script);
 document.body.removeChild(script);
 </script>
 <h1>このデバイスの情報</h1>
-<p>IPaddress:&nbsp;Print in console&nbsp;Press key of F12<script>
+<p>IPaddress:&nbsp;Your&nbsp;IP&nbsp;address&nbsp;is&nbsp;print&nbsp;in&nbsp;console&emsp;&emsp;Press&nbsp;key&nbsp;of&nbsp;F12&nbsp;or&nbsp;
+<a href="https://ipinfo.io/what-is-my-ip"　target="_blank" rel="noreferrer noopener">Look your IP in ipinfo.io</a><script>
 function callback(data) {
  console.log(data.ip);
 }
-</script>&emsp;</p><a href="https://ipinfo.io"　target="_blank" rel="noreferrer noopener">ipinfo.io</a>
+</script></p>
 <br>
 <p>userAgent:&nbsp;<script>
 document.write(window.navigator.userAgent);
