--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ script.src = 'https://ipinfo.io?callback=callback';
 document.body.appendChild(script);
 document.body.removeChild(script);
 </script>
-<h1>このデバイスの情報</h1>
+<h1>This&nbsp;device's&nbsp;information&emsp;このデバイスの情報</h1>
 <p>IPaddress:&nbsp;Your&nbsp;IP&nbsp;address&nbsp;is&nbsp;print&nbsp;in&nbsp;console&emsp;&emsp;Press&nbsp;key&nbsp;of&nbsp;F12&nbsp;or&nbsp;
 <a href="https://ipinfo.io/what-is-my-ip"　target="_blank" rel="noreferrer noopener">Look your IP in ipinfo.io</a><script>
 function callback(data) {
