--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ document.write(window.navigator.userAgent);
 document.write(window.navigator.language);
 </script></p>
 
+<p>in window apps:&nbsp;<script>
+document.write(window.length);
+</script></p>
+<br>
+
 <p>browser&nbsp;name:&nbsp;<script>
 document.write(window.navigator.appName);
 </script></p>
