--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ document.write(window.navigator.userAgent);
 document.write(window.navigator.language);
 </script></p>
 
-<p>in window apps:&nbsp;<script>
+<p>in&nbsp;window&nbsp;apps:&nbsp;<script>
 document.write(window.length);
 </script></p>
 
@@ -48,6 +48,14 @@ document.write(window.screen.height);
 
 <p>Screen&nbsp;width:&nbsp;<script>
 document.write(window.screen.width);
+</script></p>
+
+<p>window&nbsp;height:&nbsp;<script>
+document.write(window.outerHeight);
+</script></p>
+
+<p>window&nbsp;width:&nbsp;<script>
+document.write(window.outerWidth);
 </script></p>
 
 </body>
