--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@ document.write(window.outerHeight);
 document.write(window.outerWidth);
 </script></p>
 
+<br><br><br><br>
+
+<table>
+ <tr>
+  <th>NT&nbsp;version</th>
+  <th>OS&nbsp;name</th>
+ </tr>
+ <tr>
+  <td>NT10.0</td>
+  <td>Windows11</td>
+ </tr>
+ <tr>
+  <td>NT10.0</td>
+  <td>Windows10</td>
+ </tr>
+</table>
 </body>
 
 </html>
