--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.write(window.outerWidth);
 
 <br><br><br><br>
 
-<h2>NT</h2>
+<h2 id="NTwin">NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</h2>
 <table>
  <tr>
   <th>NT&nbsp;version</th>
@@ -75,6 +75,26 @@ document.write(window.outerWidth);
  <tr>
   <td>NT10.0</td>
   <td>Windows10</td>
+ </tr>
+ <tr>
+  <td>NT6.3</td>
+  <td>Windows8.1</td>
+ </tr>
+ <tr>
+  <td>NT6.2</td>
+  <td>Windows8</td>
+ </tr>
+ <tr>
+  <td>NT6.1</td>
+  <td>Windows7</td>
+ </tr>
+ <tr>
+  <td>NT6.0</td>
+  <td>WindowsVista</td>
+ </tr>
+ <tr>
+  <td>NT5.1</td>
+  <td>WindowsXP</td>
  </tr>
 </table>
 </body>
