--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function callback(data) {
 
 <p>userAgent:&nbsp;<script>
 document.write(window.navigator.userAgent);
-</script></p>
+</script></p><a href="#NTwin" rel="noreferrer noopener">NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</a>
 
 <p>language:&nbsp;<script>
 document.write(window.navigator.language);
