--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ function callback(data) {
 
 <p>userAgent:&nbsp;<script>
 document.write(window.navigator.userAgent);
-</script>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p>
-<a href="#NTwin" rel="noreferrer noopener">NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</a>
+</script></p>
+<a href="#NTwin" rel="noreferrer noopener">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</a>
 
 <p>language:&nbsp;<script>
 document.write(window.navigator.language);
