--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ function callback(data) {
 <p>userAgent:&nbsp;<script>
 document.write(window.navigator.userAgent);
 </script></p>
-<a href="#NTwin" rel="noreferrer noopener">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</a>
+<p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p>
+<a href="#NTwin" rel="noreferrer noopener">NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</a>
 
 <p>language:&nbsp;<script>
 document.write(window.navigator.language);
