--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@ function callback(data) {
 
 <p>userAgent:&nbsp;<script>
 document.write(window.navigator.userAgent);
-</script></p>
-<p>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p>
-<a href="#NTwin" rel="noreferrer noopener">NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</a>
+</script></p><a id="NTlink" href="#NTwin" rel="noreferrer noopener">NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</a>
 
 <p>language:&nbsp;<script>
 document.write(window.navigator.language);
