--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@ document.write(window.outerWidth);
   <td>Windows10</td>
  </tr>
  <tr>
+  <td>NT10.0</td>
+  <td>WindowsServer2016</td>
+ </tr>
+ <tr>
   <td>NT6.3</td>
   <td>Windows8.1</td>
  </tr>
