--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ document.write(window.outerHeight);
 document.write(window.outerWidth);
 </script></p>
 
-<br><a href="https://kumoroha.github.io">Back&nbsp;home</a><br><br>
+<br><a href="https://kumoroha.github.io">←Back&nbsp;home&emsp;ホームへ戻る</a><br><br><br>
 
 <h2 id="NTwin">NT&nbsp;version&nbsp;and&nbsp;windows&nbsp;OS</h2>
 <table>
